# zynq7000-qspi-flash-algorithm

./: Cargo.toml  README.md  template.yaml
.cargo/: config.toml
src/: main.rs
