[package]
edition = "2024"
readme = "README.md"
name = "zynq7000-qspi-flash-algorithm"
version = "0.1.0"

[patch.crates-io]
flash-algorithm = { git = "https://github.com/probe-rs/flash-algorithm" }

[dependencies]
flash-algorithm = { version = "0.6.0", features = ["read-flash", "blank-check", "verify"] }
aarch32-cpu = "0.1.0"

[[bin]]
name = "zynq7000-qspi-flash-algorithm"
test = false
bench = false

[profile.dev]
codegen-units = 1
debug = 2
debug-assertions = true
incremental = false
opt-level = 3
overflow-checks = true

[profile.release]
codegen-units = 1
debug = 2
debug-assertions = false
incremental = false
lto = "fat"
opt-level = 's'
overflow-checks = false

# do not optimize proc-macro crates = faster builds from scratch
[profile.dev.build-override]
codegen-units = 8
debug = false
debug-assertions = false
opt-level = 0
overflow-checks = false

[profile.release.build-override]
codegen-units = 8
debug = false
debug-assertions = false
opt-level = 0
overflow-checks = false
