[package]
name = "zynq7000-qspi-flash-algorithm"
version = "0.1.0"
edition = "2024"
readme = "README.md"
description = "Probe-rs flash algorithm for Zynq-7000 SoCs with QSPI memory"
repository = "https://github.com/adamgreig/zynq7000-qspi-flash-algorithm"
license = "MIT OR Apache-2.0"

[dependencies]
flash-algorithm = { version = "0.7.0", features = ["read-flash", "blank-check", "verify"] }

[features]
fast_33m = ["fast"]
fast_50m = ["fast"]
fast = []

[[bin]]
name = "zynq7000-qspi-flash-algorithm"
test = false
bench = false

[profile.dev]
codegen-units = 1
debug = 2
debug-assertions = true
incremental = false
opt-level = 3
overflow-checks = true

[profile.release]
codegen-units = 1
debug = 2
debug-assertions = false
incremental = false
lto = "fat"
opt-level = 's'
overflow-checks = false

# do not optimize proc-macro crates = faster builds from scratch
[profile.dev.build-override]
codegen-units = 8
debug = false
debug-assertions = false
opt-level = 0
overflow-checks = false

[profile.release.build-override]
codegen-units = 8
debug = false
debug-assertions = false
opt-level = 0
overflow-checks = false
